Moved value to side of progress bar in completeness

--- a/app/assets/stylesheets/etk_profiles.css.scss
+++ b/app/assets/stylesheets/etk_profiles.css.scss
@@ -700,82 +700,83 @@
 
   .title {
     font-size: 14px;
+    margin-bottom: 5px;
   }
 
   .text {
     font-size: 13px;
     line-height: 13px;
-    margin-top: 8px;
     p { line-height: 16px; }
   }
 
-  /* bar container */
-  .ui-progress-bar {
-    margin-top: 5px;
-    margin-bottom: 5px;;
-    position: relative;
-    height: 20px;
-    padding-right: 2px;
-    background-color: #abb2bc;
+  .bar {
+    /* bar container */
+    .ui-progress-bar {
+      display: inline-block;
+      position: relative;
+      width: 150px;
+      height: 20px;
+      background-color: #abb2bc;
 
-    border-radius: 10px;
-    -moz-border-radius: 10px;
-    -webkit-border-radius: 10px;
+      border-radius: 5px;
+      -moz-border-radius: 5px;
+      -webkit-border-radius: 5px;
 
-    background: -webkit-gradient(linear, left bottom, left top, color-stop(0, #b6bcc6), color-stop(1, #9da5b0));
-    background: -moz-linear-gradient(#9da5b0 0%, #b6bcc6 100%);
+      background: -webkit-gradient(linear, left bottom, left top, color-stop(0, #b6bcc6), color-stop(1, #9da5b0));
+      background: -moz-linear-gradient(#9da5b0 0%, #b6bcc6 100%);
 
-    -webkit-box-shadow: inset 0px 1px 2px 0px rgba(0, 0, 0, 0.5), 0px 1px 0px 0px #FFF;
-    -moz-box-shadow: inset 0px 1px 2px 0px rgba(0, 0, 0, 0.5), 0px 1px 0px 0px #FFF;
-    box-shadow: inset 0px 1px 2px 0px rgba(0, 0, 0, 0.5), 0px 1px 0px 0px #FFF;
-  }
+      -webkit-box-shadow: inset 0px 1px 2px 0px rgba(0, 0, 0, 0.5), 0px 1px 0px 0px #FFF;
+      -moz-box-shadow: inset 0px 1px 2px 0px rgba(0, 0, 0, 0.5), 0px 1px 0px 0px #FFF;
+      box-shadow: inset 0px 1px 2px 0px rgba(0, 0, 0, 0.5), 0px 1px 0px 0px #FFF;
 
-  /* progress bar itelf */
-  .ui-progress {
-    position: relative;
-    display: block;
-    overflow: hidden;
-    height: 18px;
-    -moz-border-radius: 10px;
-    -webkit-border-radius: 10px;
-    border-radius: 10px;
-    -webkit-background-size: 44px 44px;
-    background-color: #74d04c;
+        /* progress bar itelf */
+      .ui-progress {
+        position: relative;
+        display: block;
+        overflow: hidden;
+        height: 18px;
+        -moz-border-radius: 5px;
+        -webkit-border-radius: 5px;
+        border-radius: 5px;
+        -webkit-background-size: 44px 44px;
+        background-color: #74d04c;
 
-    background: -webkit-gradient(linear, 0 0, 44 44,
-      color-stop(0.00, rgba(255,255,255,0.17)),
-      color-stop(0.25, rgba(255,255,255,0.17)),
-      color-stop(0.26, rgba(255,255,255,0)),
-      color-stop(0.50, rgba(255,255,255,0)),
-      color-stop(0.51, rgba(255,255,255,0.17)),
-      color-stop(0.75, rgba(255,255,255,0.17)),
-      color-stop(0.76, rgba(255,255,255,0)),
-      color-stop(1.00, rgba(255,255,255,0))
-    ), -webkit-gradient(linear, left bottom, left top, color-stop(0, #74d04c), color-stop(1, #9bdd62));
-    background: -moz-repeating-linear-gradient(top left -30deg,
-      rgba(255,255,255,0.17),
-      rgba(255,255,255,0.17) 15px,
-      rgba(255,255,255,0) 15px,
-      rgba(255,255,255,0) 30px
-    ), -moz-linear-gradient(#9bdd62 0%, #74d04c 100%);
+        background: -webkit-gradient(linear, 0 0, 44 44,
+          color-stop(0.00, rgba(255,255,255,0.17)),
+          color-stop(0.25, rgba(255,255,255,0.17)),
+          color-stop(0.26, rgba(255,255,255,0)),
+          color-stop(0.50, rgba(255,255,255,0)),
+          color-stop(0.51, rgba(255,255,255,0.17)),
+          color-stop(0.75, rgba(255,255,255,0.17)),
+          color-stop(0.76, rgba(255,255,255,0)),
+          color-stop(1.00, rgba(255,255,255,0))
+        ), -webkit-gradient(linear, left bottom, left top, color-stop(0, #74d04c), color-stop(1, #9bdd62));
+        background: -moz-repeating-linear-gradient(top left -30deg,
+          rgba(255,255,255,0.17),
+          rgba(255,255,255,0.17) 15px,
+          rgba(255,255,255,0) 15px,
+          rgba(255,255,255,0) 30px
+        ), -moz-linear-gradient(#9bdd62 0%, #74d04c 100%);
 
-    -webkit-box-shadow: inset 0px 1px 0px 0px #dbf383, inset 0px -1px 1px #58c43a;
-    -moz-box-shadow: inset 0px 1px 0px 0px #dbf383, inset 0px -1px 1px #58c43a;
-    box-shadow: inset 0px 1px 0px 0px #dbf383, inset 0px -1px 1px #58c43a;
-    border: 1px solid #4c8932;
-    -webkit-animation: animate-stripes 2s linear infinite;
-  }
+        -webkit-box-shadow: inset 0px 1px 0px 0px #dbf383, inset 0px -1px 1px #58c43a;
+        -moz-box-shadow: inset 0px 1px 0px 0px #dbf383, inset 0px -1px 1px #58c43a;
+        box-shadow: inset 0px 1px 0px 0px #dbf383, inset 0px -1px 1px #58c43a;
+        border: 1px solid #4c8932;
+        -webkit-animation: animate-stripes 2s linear infinite;
+      }
+    }
 
-  /* label inside progress bar */
-  .ui-progress span.ui-label {
-    font-size: 1em;
-    position: absolute;
-    right: 0;
-    line-height: 25px;
-    padding-right: 12px;
-    color: rgba(0,0,0,0.6);
-    text-shadow: rgba(255,255,255, 0.45) 0 1px 0px;
-    white-space: nowrap;
+    /* label inside progress bar */
+    .value-container {
+      display: inline-block;
+      margin-left: 5px;
+      position: relative;
+      top: -5px;
+      height: 20px;
+      right: 0;
+      text-shadow: rgba(255,255,255, 0.45) 0 1px 0px;
+      white-space: nowrap;
+    }
   }
 
   /* for animation */
