Made search form general so styling applies on whichever page it is displayed

--- a/app/views/etkh_profiles/_search_form.html.haml
+++ b/app/views/etkh_profiles/_search_form.html.haml
@@ -1,4 +1,5 @@
-.form
+.search-form
+  = javascript_include_tag "search-form.js"
   = form_tag('members/search', remote: true) do
     .labels
       = label_tag :name
