--- a/app/assets/stylesheets/etk_profiles.css.scss
+++ b/app/assets/stylesheets/etk_profiles.css.scss
@@ -813,37 +813,40 @@
 .search-form {
   @include rounded_borders(rgb(200,200,200),3px,12px);
   width: 550px;
-  height: 60px;
-  margin-top: 10px;
-  padding: 10px;
-  padding-top: 20px;
 
-  .labels {
-    display: inline-block;
-    margin-left: 15px;
-    label { margin-bottom: 25px; }
-  }
-  .inputs {
-    display: inline-block;
-    margin-left: 30px;
-    position: relative;
-    input {
-      display: block;
-      margin-bottom: 15px;
-      width: 170px;
+  form {
+    padding: 10px;
+    padding-top: 30px;
+    padding-bottom: 20px;
+    margin-bottom: 0px;
+
+    .labels {
+      display: inline-block;
+      margin-left: 15px;
+      label { margin-bottom: 25px; }
     }
-  }
-  #hidden-labels, #hidden-inputs { display: none }
-  .link {
-    display: inline-block;
-    margin-left: 10px;
-  }
-  .button {
-    display: inline-block;
-    position: relative;
-    margin-left: 10px;
-    .btn.btn-info {
-      @include background-linear-gradient(top,#DD5D8C,#d4346f);
+    .inputs {
+      display: inline-block;
+      margin-left: 30px;
+      position: relative;
+      input {
+        display: block;
+        margin-bottom: 15px;
+        width: 170px;
+      }
+    }
+    #hidden-labels, #hidden-inputs { display: none }
+    .link {
+      display: inline-block;
+      margin-left: 10px;
+    }
+    .button {
+      display: inline-block;
+      position: relative;
+      margin-left: 10px;
+      .btn.btn-info {
+        @include background-linear-gradient(top,#DD5D8C,#d4346f);
+      }
     }
   }
 }
