Added display popup to all-members page

--- a/app/views/etkh_profiles/index.html.haml
+++ b/app/views/etkh_profiles/index.html.haml
@@ -11,6 +11,8 @@
       =link_to letter, "##{letter}"
       &nbsp;|&nbsp;
     
+    #profile-popup
+
     .page-header
       %h3 Newest members
 
