--- a/app/assets/stylesheets/etk_profiles.css.scss
+++ b/app/assets/stylesheets/etk_profiles.css.scss
@@ -658,14 +658,17 @@
   }
 }
 
-#profile-popup { position: absolute; }
+#profile-popup {
+  position: absolute;
+  z-index: 100;
+}
 
 #profile-hover {
   width: 300px;
   height: 150px;
   padding: 10px;
   background-color: #FFFFFF;
-  @include rounded_borders(#A1A1A1, 3px, 5px);
+  @include rounded_borders(#A1A1A1, 3px, 5px); 
 
   .avatar {
     position: relative;
