--- a/app/assets/stylesheets/etk_profiles.css.scss
+++ b/app/assets/stylesheets/etk_profiles.css.scss
@@ -665,7 +665,8 @@
 
 #profile-hover {
   width: 300px;
-  height: 150px;
+  height: 100px;
+  overflow: hidden;
   padding: 10px;
   background-color: #FFFFFF;
   @include rounded_borders(#A1A1A1, 3px, 5px); 
