WIP started redirecting to search in members page

--- a/app/views/etkh_profiles/_profiles_selection.html.haml
+++ b/app/views/etkh_profiles/_profiles_selection.html.haml
@@ -1,5 +1,6 @@
-- users.each do |user|
-  = render partial: 'profile_teaser', locals: { user: user }
+- if users
+  - users.each do |user|
+    = render partial: 'profile_teaser', locals: { user: user }
 
 :javascript
   $(document).ready( function() {
