--- a/app/views/etkh_profiles/our_members.html.haml
+++ b/app/views/etkh_profiles/our_members.html.haml
@@ -9,5 +9,8 @@
       = render partial: 'search_form'
     %hr
 
+    = content_tag "div", id: "data-search", data: { redirect_to_search: @redirect_to_search } do
+      -# this line is important
+
     #members-list
       = render partial: 'profiles_selection', locals: { users: @selected_users }
